Fix scrolling overflow issues on large layouts

--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,8 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
   background: var(--bg-color);
 }
 
